created class TypeCard, TypeCardDto and Enum TypeCardEnum

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -18,3 +18,26 @@ campo.clienteCpf.unico=CPF já existente!
 campo.OwnerCpf.nulo=O campo CPF é nulo!
 campo.clienteCpf.obrigatorio=O campo CPF é obrigatório!
 
+campo.nameCard.obrigatorio=O campo nome do cartão é obrigatório!
+campo.nameCard.caracteres=O campo digito verificador passou de 128 caracteres
+campo.nameCard.nulo=O campo nome do cartão é nulo!
+
+campo.flag.obrigatorio=O campo bandeira do cartão é obrigatório!
+campo.flag.nulo=O campo nome do cartão é nulo!
+
+campo.typeCard.obrigatorio=O campo tipo do cartão é obrigatório!
+campo.typeCard.caracteres=O campo tipo cartão passou de 128 caracteres
+campo.verificationDigital.nulo=O campo tipo cartão é nulo!
+
+campo.number.obrigatorio=O campo numero do cartão é obrigatório!
+campo.number.nulo=O campo numero do cartão é nulo
+campo.number.invalido=O numero do cartão é inválido. Deve possuir o seguinte formato 9999.9999.9999.9999 e ser formado apenas por números!
+
+campo.digitCode.obrigatorio=O campo digito é obrigatório!
+campo.digitCode.nulo=O campo digito é nulo
+campo.digitCode.obrigatorio=O digito do cartão é inválido. Deve possuir apenas um numero entre 0-9!
+
+campo.limitBalance.obrigatorio=O campo limite de saldo é obrigatório!
+campo.limitBalance.nulo=O campo limite de saldo é nulo
+campo.positiveorzero.postivo=O valor deve ser maior ou igual a zero
+
