--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,42 +1,32 @@
 campo.nameOwner.obrigatorio=O campo nome é obrigatório!
-campo.clienteNome.caracteres=O campo nome passou de 50 caracteres
-campo.clienteNome.nulo=O campo nome é nulo!
-
+campo.nameOwner.caracteres=O campo nome passou de 50 caracteres
+campo.nameOwner.nulo=O campo nome é nulo!
 campo.agencyCode.obrigatorio=O campo agencia é obrigatório!
 campo.agencyCode.digitos=O campo agencia passou de 4 digitos
 campo.agencyCode.nulo=O campo agencia é nulo!
-
 campo.accountCode.obrigatorio=O campo conta é obrigatório!
 campo.accountCode.digitos=O campo conta passou de 8 digitos
 campo.accountCode.nulo=O campo conta é nulo!
-
 campo.verificationDigital.obrigatorio=O campo digito verificador é obrigatório!
 campo.verificationDigital.digitos=O campo digito verificador passou de 1 digitos
 campo.verificationDigital.nulo=O campo digito verificador é nulo!
-
-campo.clienteCpf.unico=CPF já existente!
-campo.OwnerCpf.nulo=O campo CPF é nulo!
-campo.clienteCpf.obrigatorio=O campo CPF é obrigatório!
-
+campo.accountcpf.unico=CPF já existente!
+campo.accountcpf.nulo=O campo CPF é nulo!
+campo.accountcpf.obrigatorio=O campo CPF é obrigatório!
 campo.nameCard.obrigatorio=O campo nome do cartão é obrigatório!
 campo.nameCard.caracteres=O campo digito verificador passou de 128 caracteres
 campo.nameCard.nulo=O campo nome do cartão é nulo!
-
 campo.flag.obrigatorio=O campo bandeira do cartão é obrigatório!
 campo.flag.nulo=O campo nome do cartão é nulo!
-
 campo.typeCard.obrigatorio=O campo tipo do cartão é obrigatório!
 campo.typeCard.caracteres=O campo tipo cartão passou de 128 caracteres
 campo.verificationDigital.nulo=O campo tipo cartão é nulo!
-
 campo.number.obrigatorio=O campo numero do cartão é obrigatório!
 campo.number.nulo=O campo numero do cartão é nulo
 campo.number.invalido=O numero do cartão é inválido. Deve possuir o seguinte formato 9999.9999.9999.9999 e ser formado apenas por números!
-
 campo.digitCode.obrigatorio=O campo digito é obrigatório!
 campo.digitCode.nulo=O campo digito é nulo
 campo.digitCode.obrigatorio=O digito do cartão é inválido. Deve possuir apenas um numero entre 0-9!
-
 campo.limitBalance.obrigatorio=O campo limite de saldo é obrigatório!
 campo.limitBalance.nulo=O campo limite de saldo é nulo
 campo.positiveorzero.postivo=O valor deve ser maior ou igual a zero
