--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -24,7 +24,7 @@ campo.verificationDigital.nulo=O campo tipo cartão é nulo!
 campo.number.obrigatorio=O campo numero do cartão é obrigatório!
 campo.number.nulo=O campo numero do cartão é nulo
 campo.number.invalido=O numero do cartão é inválido. Deve possuir o seguinte formato 9999.9999.9999.9999 e ser formado apenas por números!
-campo.digitCode.obrigatorio=O campo digito é obrigatório!
+campo.digitCode.invalido=O campo digito é invalido!
 campo.digitCode.nulo=O campo digito é nulo
 campo.digitCode.obrigatorio=O digito do cartão é inválido. Deve possuir apenas um numero entre 0-9!
 campo.limitBalance.obrigatorio=O campo limite de saldo é obrigatório!
