update method to account deleted

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -18,7 +18,7 @@ campo.nameCard.caracteres=O campo digito verificador passou de 128 caracteres
 campo.nameCard.nulo=O campo nome do cartão é nulo!
 campo.flag.obrigatorio=O campo bandeira do cartão é obrigatório!
 campo.flag.nulo=O campo nome do cartão é nulo!
-campo.typeCard.obrigatorio=O campo tipo do cartão é obrigatório!
+campo.typeCard.nulo=O campo tipo do cartão é obrigatório!
 campo.typeCard.caracteres=O campo tipo cartão passou de 128 caracteres
 campo.verificationDigital.nulo=O campo tipo cartão é nulo!
 campo.number.obrigatorio=O campo numero do cartão é obrigatório!
