--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -19,7 +19,7 @@ campo.nameCard.nulo=O campo nome do cartão é nulo!
 campo.flag.obrigatorio=O campo bandeira do cartão é obrigatório!
 campo.flag.nulo=O campo nome do cartão é nulo!
 campo.typeCard.nulo=O campo tipo do cartão é obrigatório!
-campo.typeCard.caracteres=O campo tipo cartão passou de 128 caracteres
+campo.typeCard.validacao=So e permitido entradas do tipo MEAL_CARD, CRED_CARD, DEBI_CARD, GIFT_CARD
 campo.verificationDigital.nulo=O campo tipo cartão é nulo!
 campo.number.obrigatorio=O campo numero do cartão é obrigatório!
 campo.number.nulo=O campo numero do cartão é nulo
