DTO validations update

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,6 +1,6 @@
-campo.nameOwner.obrigatorio=O campo nome é obrigatório!
-campo.nameOwner.caracteres=O campo nome passou de 50 caracteres
-campo.nameOwner.nulo=O campo nome é nulo!
+campo.nameowner.obrigatorio=O campo nome é obrigatório!
+campo.nameowner.caracteres=O campo nome passou de 50 caracteres
+campo.nameowner.nulo=O campo nome é nulo!
 campo.agencyCode.obrigatorio=O campo agencia é obrigatório!
 campo.agencyCode.digitos=O campo agencia passou de 4 digitos
 campo.agencyCode.nulo=O campo agencia é nulo!
@@ -13,20 +13,16 @@ campo.verificationDigital.nulo=O campo digito verificador é nulo!
 campo.accountcpf.unico=CPF já existente!
 campo.accountcpf.nulo=O campo CPF é nulo!
 campo.accountcpf.obrigatorio=O campo CPF é obrigatório!
-campo.nameCard.obrigatorio=O campo nome do cartão é obrigatório!
-campo.nameCard.caracteres=O campo digito verificador passou de 128 caracteres
-campo.nameCard.nulo=O campo nome do cartão é nulo!
+campo.nameCard.caracteres=O campo name card passou de 128 caracteres
+campo.namecard.nulo=O campo nome do cartão é nulo!
 campo.flag.obrigatorio=O campo bandeira do cartão é obrigatório!
 campo.flag.nulo=O campo nome do cartão é nulo!
-campo.typeCard.nulo=O campo tipo do cartão é obrigatório!
-campo.typeCard.validacao=So e permitido entradas do tipo MEAL_CARD, CRED_CARD, DEBI_CARD, GIFT_CARD
+campo.typecard.validacao=So e permitido entradas do tipo MEAL_CARD, CRED_CARD, DEBI_CARD, GIFT_CARD
 campo.verificationDigital.nulo=O campo tipo cartão é nulo!
 campo.number.obrigatorio=O campo numero do cartão é obrigatório!
 campo.number.nulo=O campo numero do cartão é nulo
 campo.number.invalido=O numero do cartão é inválido. Deve possuir o seguinte formato 9999.9999.9999.9999 e ser formado apenas por números!
-campo.digitCode.invalido=O campo digito é invalido!
-campo.digitCode.nulo=O campo digito é nulo
-campo.digitCode.obrigatorio=O digito do cartão é inválido. Deve possuir apenas um numero entre 0-9!
+campo.digitCode.invalido=O campo É NULO ou não possui tres digitos!
 campo.limitBalance.obrigatorio=O campo limite de saldo é obrigatório!
 campo.limitBalance.nulo=O campo limite de saldo é nulo
 campo.positiveorzero.postivo=O valor deve ser maior ou igual a zero
