--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,29 +1,22 @@
-campo.nameowner.obrigatorio=O campo nome e obrigatório!
+campo.nameowner.obrigatorio=O campo nome e obrigatorio!
 campo.nameowner.caracteres=O campo nome passou de 50 caracteres
-campo.nameowner.nulo=O campo nome e nulo!
-campo.agencyCode.obrigatorio=O campo agencia é obrigatório!
+campo.agencyCode.obrigatorio=O campo agencia e obrigatorio!
 campo.agencyCode.digitos=O campo agencia passou de 4 digitos
-campo.agencyCode.nulo=O campo agencia e nulo!
-campo.accountCode.obrigatorio=O campo conta e obrigatório!
+campo.accountCode.obrigatorio=O campo conta e obrigatorio!
 campo.accountCode.digitos=O campo conta passou de 8 digitos
-campo.accountCode.nulo=O campo conta e nulo!
-campo.verificationDigital.obrigatorio=O campo digito verificador e obrigatório!
+campo.verificationDigital.obrigatorio=O campo digito verificador e obrigatorio!
 campo.verificationDigital.digitos=O campo digito verificador passou de 1 digitos
-campo.verificationDigital.nulo=O campo digito verificador é nulo!
-campo.accountcpf.unico=CPF já existente!
 campo.accountcpf.nulo=O campo CPF e nulo!
-campo.accountcpf.obrigatorio=O campo CPF e obrigatório!
 campo.nameCard.caracteres=O campo name card passou de 128 caracteres
-campo.namecard.nulo=O campo nome do cartão é nulo!
-campo.flag.obrigatorio=O campo bandeira do cartão é obrigatório!
-campo.flag.nulo=O campo nome do cartão é nulo!
-campo.verificationDigital.nulo=O campo tipo cartão e nulo!
-campo.number.obrigatorio=O campo numero do cartão e obrigatório!
+campo.namecard.nulo=O campo nome do cartao e nulo!
+campo.flag.nulo=O campo bandeira do cartão e nulo!
+campo.verificationDigital.nulo=O campo tipo cartao e nulo!
+campo.number.obrigatorio=O campo numero do cartao e obrigatório!
 campo.number.nulo=O campo numero do cartão e nulo
-campo.number.invalido=O numero do cartão e invalido. Deve possuir o seguinte formato 9999.9999.9999.9999 e ser formado apenas por números!
-campo.digitCode.invalido=O campo e NULO ou nao possui tres digitos!
-campo.limitBalance.obrigatorio=O campo limite de saldo e obrigatório!
-campo.limitBalance.nulo=O campo limite de saldo é nulo
-campo.positiveorzero.postivo=O valor deve ser maior ou igual a zero
+campo.number.invalido=O numero do cartao e invalido. Deve possuir o seguinte formato 9999.9999.9999.9999 e ser formado apenas por numeros!
+campo.digitCode.invalido=O campo digitCode e NULO ou nao possui tres digitos!
+campo.limitBalance.obrigatorio=O campo limite de saldo e obrigatorio!
+campo.limitBalance.nulo=O campo limite de saldo e nulo
+campo.positiveorzero.postivo=O limiteBalance deve ser maior ou igual a zero
 
 
