created class SwaggerConfig to documentation

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,6 @@
+# Propriedades baseadas em chave=valor. Indentifica a propriedade para poder
+# fazer interpolação nas classes associadas, e o valor será a mensagem correspondente
+
 campo.nameowner.obrigatorio=O campo nome e obrigatorio!
 campo.nameowner.caracteres=O campo nome passou de 50 caracteres
 campo.agencyCode.obrigatorio=O campo agencia e obrigatorio!
