Handle exception optimization

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -16,7 +16,7 @@ campo.flag.nulo=O campo bandeira do cartão e nulo!
 campo.verificationDigital.nulo=O campo tipo cartao e nulo!
 campo.number.obrigatorio=O campo numero do cartao e obrigatório!
 campo.number.nulo=O campo numero do cartão e nulo
-campo.number.invalido=O numero do cartao e invalido. Deve possuir o seguinte formato 9999.9999.9999.9999 e ser formado apenas por numeros!
+campo.number.invalido=O numero do cartao e invalido. Deve possuir o seguinte formato 9999 9999 9999 9999, e deve ser composto apenas por numeros!
 campo.digitCode.invalido=O campo digitCode e NULO ou nao possui tres digitos!
 campo.limitBalance.obrigatorio=O campo limite de saldo e obrigatorio!
 campo.limitBalance.nulo=O campo limite de saldo e nulo
